[package]
name = "container_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_container_runtime = {path = "../lib_container_runtime"}
rocket = "0.5.0-rc.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
clap = {version = "3.0.14", features = ["derive"]}
